force-app/main/default/objects/Account/fields/Acc_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Acc_Start_Date__c</fullName>
    <label>Acc Start Date</label>
    <type>Date</type>
</CustomField>