force-app/main/default/objects/Account/fields/Acc_Type__c.field-meta.xml
<CustomField>
    <fullName>Acc_Type__c</fullName>
    <label>Acc Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Savings</fullName>
            </value>
            <value>
                <fullName>Current</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>