force-app/main/default/objects/Account/fields/Internal_comments__c.field-meta.xml
<CustomField>
    <fullName>Internal_comments__c</fullName>
    <label>Internal comments</label>
    <type>TextArea</type>
</CustomField>